Fixed pdf generation issue on mobile devices

--- a/src/components/ProjectForm/PdfGenerating/PdfGenerating.scss
+++ b/src/components/ProjectForm/PdfGenerating/PdfGenerating.scss
@@ -1,4 +1,8 @@
 .PdfGenerating {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
   height: 100vh;
   display: flex;
   flex-direction: column;
